--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "element-plus": "^2.10.4",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@unocss/vite": "^66.3.3",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "typescript": "~5.8.3",
+    "unocss": "^66.3.3",
     "vite": "^7.0.4",
     "vue-tsc": "^2.2.12"
   }
