--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "element-plus": "^2.10.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
     "@unocss/vite": "^66.3.3",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
